--- a/package.json
+++ b/package.json
@@ -25,12 +25,15 @@
     "@nestjs/common": "^7.5.1",
     "@nestjs/core": "^7.5.1",
     "@nestjs/platform-express": "^7.5.1",
+    "archiver": "5.3.0",
+    "del": "^6.0.0",
     "nestjs-command": "^2.0.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^6.6.3",
     "shelljs": "^0.8.4",
-    "yargs": "^16.2.0"
+    "yargs": "^16.2.0",
+    "zip-folder": "^1.0.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^7.5.1",
